change method block user